--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@faker-js/faker": "^8.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
